fix: faq whitespace

--- a/styles/Faq.module.scss
+++ b/styles/Faq.module.scss
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: column;
   h1 {
-    margin-top: 4vh;
+    margin-top: 2vh;
     font-size: 32px;
     font-weight: 600;
   }
@@ -25,7 +25,7 @@
 
 .main {
   min-height: 0;
-  margin-top: 2.5vh;
+  margin-top: 2vh;
   width: 100%;
   flex: 1 1 0;
   display: flex;
@@ -33,7 +33,7 @@
 }
 
 .aside {
-  margin-top: 2.5vh;
+  margin-top: 2vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -43,7 +43,7 @@
     position: relative;
     button {
       margin: 0.5rem 0;
-      padding: 0 4vw 0 2vw;
+      padding: 0 4vw 0 1vw;
       height: 3rem;
       display: flex;
       align-items: center;
@@ -129,9 +129,9 @@
   height: 100%;
   max-height: 100%;
   width: 100%;
-  padding-top: 2.5vh;
-  padding-left: 7.5vw;
-  padding-right: 2.5vw;
+  padding-top: 2vh;
+  padding-left: 4vw;
+  padding-right: 2vw;
   display: flex;
   flex-direction: column;
 }
